[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/toggle_on.svg" type="Texture" id=1]
[ext_resource path="res://assets/icons/icon_translate.svg" type="Texture" id=2]
[ext_resource path="res://assets/ui/toggle_off.svg" type="Texture" id=4]
[ext_resource path="res://components/settings/settings.gd" type="Script" id=5]
[ext_resource path="res://theme.tres" type="Theme" id=6]

[node name="Settings" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
scroll_horizontal_enabled = false
script = ExtResource( 5 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 696.0
margin_bottom = 804.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="List" type="VBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 676.0
margin_bottom = 784.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Language" type="OptionButton" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_right = 656.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
icon = ExtResource( 2 )
expand_icon = true

[node name="VolumeMaster" type="VBoxContainer" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 90.0
margin_right = 656.0
margin_bottom = 161.0
custom_constants/separation = 10

[node name="Text" type="HBoxContainer" parent="Margin/List/VolumeMaster"]
margin_right = 656.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="Margin/List/VolumeMaster/Text"]
margin_right = 588.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "T_VOLUME_MASTER"

[node name="Amount" type="Label" parent="Margin/List/VolumeMaster/Text"]
margin_left = 592.0
margin_right = 656.0
margin_bottom = 29.0
text = "100%"

[node name="VolumeMaster" type="HSlider" parent="Margin/List/VolumeMaster"]
margin_top = 39.0
margin_right = 656.0
margin_bottom = 71.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="VolumeMusic" type="VBoxContainer" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 191.0
margin_right = 656.0
margin_bottom = 262.0
custom_constants/separation = 10

[node name="Text" type="HBoxContainer" parent="Margin/List/VolumeMusic"]
margin_right = 656.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="Margin/List/VolumeMusic/Text"]
margin_right = 588.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "T_VOLUME_MUSIC"

[node name="Amount" type="Label" parent="Margin/List/VolumeMusic/Text"]
margin_left = 592.0
margin_right = 656.0
margin_bottom = 29.0
text = "100%"

[node name="VolumeMusic" type="HSlider" parent="Margin/List/VolumeMusic"]
margin_top = 39.0
margin_right = 656.0
margin_bottom = 71.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="VolumeSound" type="VBoxContainer" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 292.0
margin_right = 656.0
margin_bottom = 363.0
custom_constants/separation = 10

[node name="Text" type="HBoxContainer" parent="Margin/List/VolumeSound"]
margin_right = 656.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="Margin/List/VolumeSound/Text"]
margin_right = 588.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "T_VOLUME_SOUND"

[node name="Amount" type="Label" parent="Margin/List/VolumeSound/Text"]
margin_left = 592.0
margin_right = 656.0
margin_bottom = 29.0
text = "100%"

[node name="VolumeSound" type="HSlider" parent="Margin/List/VolumeSound"]
margin_top = 39.0
margin_right = 656.0
margin_bottom = 71.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="Fullscreen" type="CheckButton" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 393.0
margin_right = 656.0
margin_bottom = 425.0
rect_min_size = Vector2( 300, 0 )
custom_icons/off = ExtResource( 4 )
custom_icons/on = ExtResource( 1 )
text = "T_FULLSCREEN"

[node name="MuteInBackground" type="CheckBox" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 455.0
margin_right = 656.0
margin_bottom = 487.0
text = "T_MUTE_IN_BACKGROUND"

[node name="SkipLevelClear" type="CheckBox" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 517.0
margin_right = 656.0
margin_bottom = 549.0
text = "T_SKIP_LEVEL_CLEAR"

[node name="SkipConfirmationButtons" type="CheckBox" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 579.0
margin_right = 656.0
margin_bottom = 611.0
text = "T_SKIP_CONFIRMATION_BUTTONS"

[node name="DisableGrayscale" type="CheckBox" parent="Margin/List"]
modulate = Color( 0.47451, 0.596078, 0.933333, 1 )
margin_top = 641.0
margin_right = 656.0
margin_bottom = 673.0
text = "T_DISABLE_GRAYSCALE"

[node name="UnlockCode" type="LineEdit" parent="Margin/List"]
margin_top = 703.0
margin_right = 656.0
margin_bottom = 764.0
max_length = 16
placeholder_text = "T_UNLOCK_CODE"

[connection signal="item_selected" from="Margin/List/Language" to="." method="select_language"]
[connection signal="value_changed" from="Margin/List/VolumeMaster/VolumeMaster" to="." method="_on_VolumeMaster_value_changed"]
[connection signal="value_changed" from="Margin/List/VolumeMusic/VolumeMusic" to="." method="_on_VolumeMusic_value_changed"]
[connection signal="value_changed" from="Margin/List/VolumeSound/VolumeSound" to="." method="_on_VolumeSound_value_changed"]
[connection signal="toggled" from="Margin/List/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Margin/List/MuteInBackground" to="." method="_on_MuteInBackground_toggled"]
[connection signal="toggled" from="Margin/List/SkipLevelClear" to="." method="_on_SkipLevelClear_toggled"]
[connection signal="toggled" from="Margin/List/SkipConfirmationButtons" to="." method="_on_SkipConfirmationButtons_toggled"]
[connection signal="toggled" from="Margin/List/DisableGrayscale" to="." method="_on_DisableGrayscale_toggled"]
[connection signal="text_changed" from="Margin/List/UnlockCode" to="." method="_on_UnlockCode_text_changed"]
